refactor: EatInOrder 객체 생성 방법을 생성자를 통해서만 생성하도록 수정